# infrastructure

./: .containerignore  .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  README.md  base.yml  desktop.bu  desktop.ign  desktop.yml  detect-device.sh  live.yml
.ci/: README.md  all.yml  build.yml  butane.yml  check.yml  images.yml  ips-build.yml  ips.yml  nas-build.yml  nas.yml  offline-opa.yml  offline.yml  opa-build.yml  opa.yml  sway-build.yml  sway.yml  vm-build.yml  vm.yml  workstation-build.yml  workstation.yml
.workflow/: butane  desktop  gext  ips  nas  update  workstation
butane/: README.md  base.yml  cache-bootc-image.sh  cinnamon.yml  desktop.yml  detect-device.sh  jellyfin.yml  k3s.yml  (+12 more)
tools/ci/: .gitignore  Cargo.toml  README.md
tools/ci/src/: artifacts.rs  cli.rs  cli_tests.rs  conditions.rs  containers.rs  defaults.rs  defaults_tests.rs  docs.rs  error.rs  git.rs  git_tests.rs  install.rs  install_tests.rs  lib.rs  main.rs  output.rs  output_tests.rs  repo.rs  schema.rs  schema_definitions.rs  status.rs
tools/ci/src/actions/: mod.rs  parser.rs  tests.rs
tools/ci/src/config/: mod.rs  tests.rs  types.rs  validation.rs
tools/ci/src/runner/: action_metadata.rs  actions.rs  builtins.rs  cache.rs  cleanup.rs  env.rs  file_actions.rs  file_system.rs  inputs.rs  jobs.rs  lock.rs  mod.rs  native_container.rs  native_workflow.rs  tests.rs
tools/ci/src/workflow/: discovery.rs  mod.rs  native.rs  tests.rs  validation.rs
tools/ci/tests/: commands.rs  container_runtime.rs  schema.rs
tools/ci/tests/common/: assertions.rs  fake_podman.rs  mod.rs  repo.rs
(+423 files in other folders)
