[package]
name = "ci"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["noobping"]
description = "small Git-native CI runner and build tool"
repository = "https://github.com/noobping/infrastructure"

[features]
default = []
integrations = []

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap_mangen = "0.2"
fs2 = "0.4"
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2"
